@@ -1,5 +1,9 @@
 2004-03-01  Ulrich Drepper  <drepper@redhat.com>
 
+	* nscd/nscd_getgr_r.c (nscd_getgr_r): Add missing initialization
+	of return value.
+	* nscd/nscd_gethst_r.c (nscd_gethst_r): Likewise.
+
 	* sysdeps/unix/sysv/linux/kernel-features.h: Add support for
 	__ASSUME_GETDENTS32_D_TYPE.
 	* sysdeps/unix/sysv/linux/getdents.c: For 2.6.4+ kernels use
